# MLZoomcamp2024

./: .gitignore  Homework2.ipynb  Pipfile  pyproject.toml
03-classification/: notebook.ipynb
04-evaluation/: notebook.ipynb
05-deployment/: notebook.ipynb  ping.py  predict-test.ipynb  predict-test.py  predict.py  train.py
exercises/: Experimental-Notebook.ipynb
exercises/chapter-03-churn-prediction/: 03-churn.ipynb
homeworks/: Homework1.ipynb  Homework3.ipynb
homeworks/hw-5/: Dockerfile  Pipfile  q3.py  q4-server-test.py  q4.py  q6-server-test.py  q6.py
homeworks/hw-5-fastapi/: Dockerfile  pyproject.toml  q3.py  q4-server-test.py  q4.py
