[project]
name = "mlzoomcamp2024"
version = "0.1.0"
description = "Project and homeworks for ML Zoomcamp 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "jupyter>=1.1.1",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "polars[all]>=1.9.0",
    "pytz>=2024.2",
    "rich[jupyter]>=13.9.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
[tool.ruff]
extend-include = ["*.ipynb"]
[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
